--- a/basic-services/person/src/main/resources/application.properties
+++ b/basic-services/person/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 #1
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #2
 spring.jpa.show-sql=true
 #3
