--- a/basic-services/basic-auth/src/main/resources/bootstrap.yml
+++ b/basic-services/basic-auth/src/main/resources/bootstrap.yml
@@ -9,14 +9,19 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:mysql://192.168.59.103:3306/ntd_mysql?autoReconnect=true&useSSL=false
+    url: jdbc:mysql://192.168.59.103:3306/sys-user?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&autoReconnect=true&useSSL=false
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
-  redis:
-    host: 192.168.59.103
+
 server:
-  port: 9999
+  port: 9999  #程序端口号
+
+security:
+  oauth2:
+    resource:
+      filter-order: 3 #在 Spring Boot 1.5.x版本这时固定写法，Spring Boot 1.5.x版本之前，默认即可
+
 eureka:
   client:
     service-url:
