--- a/basic-services/basic-auth/pom.xml
+++ b/basic-services/basic-auth/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
 
+		<!-- 配置-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+
 		<!-- lombok依赖 -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
