--- a/basic-services/basic-admin/src/main/resources/application.yml
+++ b/basic-services/basic-admin/src/main/resources/application.yml
@@ -38,7 +38,7 @@ management:
     enabled: false
 
 server:
-  port: 5000
+  port: 5000   # 服务端口号
 #security.basic.enabled: false
 #security:
 #  user:
